cleaned up tests for today's topics