@@ -1,10 +1,11 @@
 package com.example.putnam.spbdemos.svcs;
 
+import com.example.putnam.spbdemos.domain.Book;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-
-import com.example.putnam.spbdemos.domain.Book;
+import java.util.stream.Collectors;
 
 public class MockBookFinderImpl implements BookFinderService {
 
@@ -20,8 +21,24 @@ public class MockBookFinderImpl implements BookFinderService {
         this.books.addAll(cache);
     }
 
+    @Override
     public void addBooks(List<Book> donations) {
         this.books.addAll(donations);
+    }
+
+    @Override
+    public void addBook(Book donation) {
+        this.books.add(donation);
+    }
+
+    @Override
+    public Optional<Book> removeBookByTitle(String title) {
+        Optional<Book> rtnValue = this.books.stream().filter(b -> b.getTitle().equalsIgnoreCase(title)).findFirst();
+        if (rtnValue.isPresent()){
+            this.books.remove(rtnValue.get());
+            return rtnValue;
+        }
+        return Optional.empty();
     }
 
     @Override
@@ -36,7 +53,7 @@ public class MockBookFinderImpl implements BookFinderService {
 
     @Override
     public List<Book> findByAuthorLastName(String lastName) {
-        return this.books.stream().filter(a -> a.getAuthor().getLastName().equalsIgnoreCase(lastName)).toList();
+        return this.books.stream().filter(a -> a.getAuthor().getLastName().equalsIgnoreCase(lastName)).collect(Collectors.toList());
     }
     
 }
